ChangeLog finally started 08 February 2006

08 February 2006
	Primed hMap/HMap as to enable a new native definition