@@ -1,0 +1,4 @@
+X is zero
+something else
+something else
+X is zero
