@@ -1,4 +1,7 @@
 ChangeLog finally started 08 February 2006
 
+08 May      2006
+	MainPatternMatch.hs -- example of pattern-matching on HList's
+	Records
 08 February 2006
 	Primed hMap/HMap as to enable a new native definition
